<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zotero Commuter</string>
    <string name="title_libraryitem_detail">LibraryItem Detail</string>
    <string name="login">Login to Zotero</string>
    <string name="login_short">Login</string>
    <string name="title_activity_login">Login to Zotero</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refresh">Synchronize</string>
    <string name="network_error">Network Error</string>
    <string name="group_indicator">Group Indicator</string>
    <string name="creator_sequence_format_first">%1$s, %2$s</string>
    <string name="creator_sequence_format">; %1$s, %2$s</string>
    <string name="attachment_no_viewer">No viewer installed for this type of attachment</string>
    <string name="attachment_download_description">Downloading zotero attachment</string>
    <string name="no_external_storage">External storage not available for downloading attachment</string>
    <string name="attachment_removed">Document lost or already removed on the server</string>
    <string name="zotero_field_date">Date:</string>
    <string name="zotero_field_library_catalog">Library Catalog:</string>
    <string name="zotero_field_publication_title">Publication Title:</string>
    <string name="zotero_attachment"/>
    <string name="tags_separator">;</string>
    <string name="tags_no_tags">«no tags assigned»</string>
    <string name="collections_no_collections">«item in none collection»</string>

    <string name="full_resync">Full Synchronization</string>
    <string name="note_editor">Note Editor</string>
    <string name="save">Save</string>
    <string name="save_short">Save</string>
    <string name="bold_text">Emphasize</string>
    <string name="wipe_downloads">Delete all downloads</string>
    <string name="pref_sync_frequency">Synchronization period</string>
    <string name="sync_on_mobile_allowed">Synchronize over mobile connections</string>
    <string name="summary_sync_on_mobile">Mobile data can be costly</string>
    <string name="prefs_clear_library">Clear library</string>
    <string name="prefs_summary_clear_library">Useful if your local library is inconsistent with Zotero server</string>
    <string name="prefs_delete_attachment">Delete downloaded documents</string>
    <string name="prefs_summary_delete_attachment">Removes all downloaded attachment from the memory</string>
    <string name="prefs_login">Login to Zotero</string>
    <string name="settings">Settings</string>
    <string name="my_library">My Library</string>
    <string name="attachment_status_on_server">Remote version only</string>
    <string name="attachment_status_synced">Synchronized</string>
    <string name="attachment_status_server_updated">Update on server</string>
    <string name="attachment_status_locally_updated">Updated locally</string>
    <string name="attachment_status_conflict">Local changes conflict with server changes</string>

    <string name="resolve_attachment_conflict">Resolve Attachment Conflict</string>
    <string name="resolve_item_conflict">Resolve Item Conflict</string>
    <string name="download_on_mobile_allowed">Attachments over Mobile Network</string>
    <string name="summary_download_on_mobile">Mobile Data can be associated with cost</string>
    <string name="download_on_roaming_allowed">Download attachment when in Roaming Network</string>
    <string name="summary_download_on_roaming">Roaming Data transfers can be associated with payments</string>
    <string name="pref_synchronizing">Synchronization</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="all_items">All Items</string>
    <string name="nav_collections">Collections</string>
    <string name="user_id">Research Sentience</string>
    <string name="linked_file">Local file link</string>
    <string name="linked_url">Internet link</string>
    <string name="fallback_page">http://www.zotero.org</string>
    <string name="add_node">Add New Note</string>
    <string name="new_note_content"></string>
    <string name="highlight">Highlight</string>
    <string name="note">Note</string>
    <string name="annotation_template"><![CDATA[<p><b>@type on page @page:</b><br/>@content</p>]]></string>
    <string name="attachment_status_extracting">Extracting annotations</string>
    <string name="clipdata_item">Zotero Item</string>
    <string name="extraction_error">Cannot extract annotations</string>
    <string name="action_tags">Tags</string>
    <string name="tags">Tags</string>
    <string name="tags_split_regex">,|;</string>
    <string name="read_later">Read later</string>
    <string name="read_later_tag">_readingQueue</string>
    <string name="navigation_reading_queue">Reading Queue</string>
    <string name="remove_local_version">Remove local version</string>
    <string name="italic_text">Cursive</string>
    <string name="underline_text">Underline</string>
    <string name="strike_text">Strike through</string>
    <string name="share">Share</string>

    <plurals name="number_of_items">
        <item quantity="zero">No items</item>
        <item quantity="one">One item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <plurals name="count_items_selected">
        <item quantity="other">%d selected</item>
    </plurals>
</resources>